# sanskrit

./: .gitignore  CMakeLists.txt  README.md  buf.c  buf.h  build-ctan-dist.sh  readme.txt  skt.c  skt.cxx  skt10.mf  skt8.mf  skt9.mf  sktb10.mf  sktbs10.mf  sktchars.mf  sktdefs.mf  sktdoc.ps  sktdoc.skt  sktf10.mf  sktfs10.mf  sktligs.mf  skts10.mf
.github/workflows/: macos.yml  ubuntu.yml
cmake/: linux-to-mingw-cross.cmake
ps-type1/: README
tests/: copyright.skt
